--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react-dom": "^16.9.7",
     "d3": "^5.16.0",
     "graphlabs.core.lib": "^0.1.22",
-    "graphlabs.core.template": "^1.0.57",
+    "graphlabs.core.graphs": "^0.1.6",
+    "graphlabs.core.template": "^1.0.60",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
